--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
+    "axios": "^0.27.1",
     "core-js": "^3.8.3",
+    "leaflet": "^1.8.0",
     "vue": "^3.2.13",
     "vue-csv-import": "^4.1.2"
   },
